--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,13 +34,18 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
+  //our chosen from colormind
+  primary:    #5fc2ad,
+  secondary:  #055491,
+  tres:       #10B9C1,
+  four:       #FFFFFF,
+  five:       #313F42,
+
+  //template provided
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
 );
-
 
 // App iOS Variables
 // --------------------------------------------------
