--- a/src/pages/post/post.scss
+++ b/src/pages/post/post.scss
@@ -7,7 +7,7 @@ page-post {
         padding-right: 0px;
 
         ion-label {
-            padding-left: 9px;
+            // padding-left: 9px;
         }
     }
 
