--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -16,11 +16,11 @@
 // automatically applied to the <body> element in the app.
 
 ion-title {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 5px 0px;
-    width: 100% !important;
-    height: 100%;
-    text-align: center;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // padding: 5px 0px;
+    // width: 100% !important;
+    // height: 100%;
+    // text-align: center;
 }
