--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,12 +15,28 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
-ion-title {
-    // position: absolute;
-    // top: 0;
-    // left: 0;
-    // padding: 5px 0px;
-    // width: 100% !important;
-    // height: 100%;
-    // text-align: center;
+
+.toolbar-title-md {
+    text-align: center;
+}
+.toolbar-md ion-title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 0;  
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+.toolbar-title-wp {
+    text-align: center; 
+}
+.toolbar-wp ion-title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
 }
