--- a/src/pages/post/post.scss
+++ b/src/pages/post/post.scss
@@ -1,5 +1,7 @@
 page-post {
     #post-title {
+        margin-top: 1em;
+        font-size: 1.5em;
     }
 
     #post-genre {
@@ -16,6 +18,8 @@ page-post {
     }
 
     #venture-submit {
-        margin: 10px 0px 0px 15px;
+        margin-top: 25%;
+        padding: 50px;
+        font-size: 48px;
     }
 }
