adjust stylings for button

--- a/src/pages/post/post.scss
+++ b/src/pages/post/post.scss
@@ -19,6 +19,7 @@ page-post {
 
     #venture-submit {
         margin-top: 12%;
-        font-size: 48px;
+        padding: 25px;
+        font-size: 32px;
     }
 }
