--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,7 +14,14 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+@font-face {
+  font-family: Work;
+  src: url(../assets/fonts/work.woff2);
+}
 
+* {
+  font-family: Work;
+}
 
 .toolbar-title-md {
     text-align: center;
@@ -23,13 +30,13 @@
     position: absolute;
     top: 0;
     left: 0;
-    padding: 0;  
+    padding: 0;
     width: 100%;
     height: 100%;
     pointer-events: none;
 }
 .toolbar-title-wp {
-    text-align: center; 
+    text-align: center;
 }
 .toolbar-wp ion-title {
     position: absolute;
