--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -23,6 +23,27 @@
   font-family: Work;
 }
 
+.toolbar-background {
+  background-color: #5fc2ad;
+}
+
+#body-show-text {
+  vertical-align: middle;
+  border-radius: 10px;
+  min-height: 100px;
+  padding: 1%;
+  background-color: white;
+  border: 2px solid #33201e;
+  margin: 1%;
+  min-width: 85%;
+  box-shadow: 0px 0px 10px #888888;
+}
+
+#show-title {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
 .toolbar-title-md {
     text-align: center;
 }
