--- a/src/pages/show/show.scss
+++ b/src/pages/show/show.scss
@@ -7,12 +7,33 @@ page-show {
     #lat-info {
         text-align: center;
     }
-    
+
     #lon-info {
         text-align: center;
     }
 
     .ll-label {
-        font-size: 11px;
+        // font-size: .8em;
+        font-weight: bold;
     }
+
+    #body-show-text {
+      vertical-align: middle;
+      border-radius: 10px;
+      min-height: 100px;
+      padding: 1%;
+      background-color: white;
+      border: 2px solid #33201e;
+      margin: 1%;
+      min-width: 85%;
+      box-shadow: 0px 0px 10px #888888;
+      margin-bottom: 5%;
+    }
+
+    #show-title {
+      font-size: 1.5em;
+      font-weight: bold;
+      padding-bottom: 3%;
+    }
+
 }
